--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.scss
@@ -1,266 +1,262 @@
-.content {
-  .name-item {
-    .require_star {
-      color: red;
-    }
-    .form-control > input {
-      border: none;
-      outline: none;
-      margin-left: 20px;
-    }
-  }
-
-  .name-item:not(:last-child) {
-    margin-bottom: 10px;
-  }
-
-  .select-option {
-    display: flex;
-    justify-content: center;
-    margin-top: 29px;
-    button {
-      width: 91px;
-      height: 31px;
-      border-radius: 5px;
-      border: none;
-      color: white;
-      // background-color: #8B8B8B;
-      background-color: #106DB6;
-      cursor: pointer;
-    }
-    button:nth-last-child(1) {
-      background-color: #106DB6;
-    }
-  }
+.color-dialog-sign {
+  color: var(--text-primary);
 }
 
-.image-sign-acc {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #E9F4FD;
-  height: 42vh;
+.height-dialog {
+  min-height: 58vh;
 }
 
-.image-sign-acc {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 42vh;
+.type-image-4 {
+  min-height: 240px;
 }
 
-.select-signature-acc {
-  width: 30%;
+.default-image {
+  min-height: 58vh;
 }
 
-.align-select {
-  margin-left: 2%;
-}
-::ng-deep .multiselect-dropdown {
-  .dropdown-btn {
-    border: 1px solid #87CAFF !important;
-    min-height: 38px;
-    height: auto;
-  }
-}
-
-//upload file
-input[type="file"] {
-  display: none;
-}
-.custom-file-upload {
-  border: 1px solid #ccc;
-  display: inline-block;
-  padding: 6px 12px;
-  cursor: pointer;
-  color: #106DB6;
-  width: 100%;
-  border-radius: 20px;
-}
-
-//label type contract
-.label_type{
+.content-title-dialog-sign {
   text-align: center;
-  font-weight: 500;
-  padding: 10px;
 }
 
-//label item form
-.label_item{
-  padding: 12px 0px 3px;
+.title-dialog-sign {
+  font-size: var(--fs14);
+  font-weight: 700;
+  line-height: 21px;
 }
 
-.require_star{
-  color: red;
+.text-select {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
+.radio-confirm input[type="radio"] {
+  width: 20px;
+  height: 20px;
+  margin: auto 8px auto 0px;
+  cursor: pointer;
+}
 
-.input-line {
+.dialog-signature {
+  height: 300px;
+  background-color: #F3F6FA;
+  border-radius: 12px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+}
+
+.dialog-signature img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.blankImg {
+  text-align: center;
+}
+
+.checkbox-confirm {
+  margin-top: 20px;
+  display: inline-flex;
+  align-items: center;
+}
+
+.checkbox-confirm .text {
+  margin-left: 8px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.checkbox-hide-processing-thread {
+  -webkit-appearance: none; /* Xóa kiểu mặc định của trình duyệt */
+  -moz-appearance: none; /* Xóa kiểu mặc định của trình duyệt */
+  appearance: none; /* Xóa kiểu mặc định của trình duyệt */
+  min-width: 24px;
+  min-height: 24px;
+  margin: auto 8px auto 0;
+  border-radius: 6px;
+  display: block;
+  border: 1px solid #A8B5CE; /* Thêm border */
   position: relative;
+  cursor: pointer;
+  background-color: #fff; /* Màu nền mặc định */
 }
-.input-img {
-  top: 10px;
-  right: 25px;
+.checkbox-hide-processing-thread:checked {
+  // background-color: #fff;
+  background-color: #0041C4;
+}
+
+.checkbox-hide-processing-thread:checked::after {
+  content: '';
   position: absolute;
-}
-.input-text {
-  border: 0;
-  width: 100%;
-  outline:0px;
+  top: 50%;
+  left: 50%;
+  width: 13px; /* Kích thước ảnh */
+  height: 10px; /* Kích thước ảnh */
+  background-image: url('../../../../../../assets/img/Vector.png'); /* Replace with your image URL */
+  background-size: cover; /* Đảm bảo ảnh bao phủ toàn bộ vùng */
+  transform: translate(-50%, -50%);
 }
 
-.container-img-file {
-  height: 47vh;
+.select-option {
   display: flex;
-  align-items: center;
   justify-content: center;
-  background: #F3F6FA;
+  button {
+    width: 120px;
+    height: 38px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 21px;
+  }
+
+  .button-cancel {
+    border: 1px solid #C6D2EA;
+    background-color: #FFFFFF;
+    color: #677694;
+  }
+
+  .button-clear, .button-confirm-active {
+    background-color: #0041C4;
+    color: #FFFFFF;
+  }
+
+  .button-confirm-disable {
+    background-color: #8E9AB0;
+    color: #FFFFFF;
+  }
 }
 
-.container-img-file-1 {
-  justify-content: center;
-  align-items: center;
+.signature-container {
+  position: relative;
+  width: 100%;
+  border-radius: 1.2vh;
+  overflow: hidden;
 }
 
-.text-choose-file {
-  margin-top: 32px;
-  font-size: 18px;
-  color: #106DB6;
+.signature-pad {
+  height: 300px;
+  border-radius: 1.2vh;
+  background-color: #F3F6FA;
+  display: block;
+}
+
+:host ::ng-deep .signature-pad canvas {
+  border: none !important;
+}
+
+.upload-photo {
+  width: 120px;
+  height: 44px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  text-align: center; /* Canh giữa theo chiều ngang */
+  line-height: 44px; /* Đặt bằng chiều cao của ô */
+  font-size: 14px;
+  font-weight: 700;
+  border: 1px solid #0041C4;
+  background-color: #FFFFFF;
+  color: #0041C4;
+  margin: auto;
 }
 
 .text-support-extension {
-  margin-top: 8px;
   color: #A8B5CE;
-  font-weight: 500;
-}
-.cancel-button{
-  border: 1px solid #8B8B8B;
-  border-radius: 5px;
-  height: 40px;
-  width: 100px;
-  box-sizing: border-box;
-  color: #677694;
-  background-color: white;
-  font-size: 13px;
-  margin: 0 10px;
-  font-weight: 700;
-}
-.save-button{
-  border: 0px;
-  border-radius: 5px;
-  height: 40px;
-  width: 100px;
-  box-sizing: border-box;
-  color: white;
-  background-color: #0041C4;
-  font-size: 13px;
-  margin: 0 10px;
-  font-weight: 700;
-}
-.title-popup {
-  font-size: var(--fs14);
-  font-weight: 700;
-  color: var(--text-primary);
-}
-.title-content {
-  font-size: var(--fs13);
-  font-weight: 500;
-  color: var(--text-primary);
-}
-.text-primary {
-  color: #00186D !important;
   font-weight: 400;
-}
-.text-inactive {
-  color: #677694 !important;
-  font-weight: 400;
-}
-.btn-up {
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  margin: 4px 2px;
-  cursor: pointer;
-  background-color: white;
-  color: #0041C4;
-  border: 1px solid #0041C4;
-  border-radius: 15px;
-  font-weight: 700;
-}
-.checkbox {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+  font-size: 12px;
+  line-height: 18px;
   margin-top: 10px;
 }
 
-.checkbox input {
-  position: absolute;
-  width: 0;
-  left: 50px;
-  height: 0;
-  opacity: 0;
-  cursor: pointer;
+.margin-top-20px {
+  margin-top: 20px !important;
 }
 
-.checkbox .checkmark {
-  position: relative;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 16px;
-  height: 16px;
-  background: white;
-  border-radius: 3px;
-  outline: 1px solid #acacac;
-  transition: all 0.2s ease;
-}
+@media (max-width: 576px) {
+  .height-dialog {
+    min-height: 54vh;
+  }
 
-.checkbox:hover .checkmark {
-  background: #f4f4f5;
-  transition: all 0.2s ease;
-}
+  .title-dialog-sign {
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 21px;
+  }
 
-.checkbox input:checked ~.checkmark {
-  background: #3f7fed;
-  outline: 1px solid rgb(95, 126, 240);
-}
+  .text-select {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+  }
 
-.checkbox input[type="radio"] ~ .checkmark {
-  border-radius: 50%;
-}
+  .margin-top-20px {
+    margin-top: 10px !important;
+  }
 
-.checkbox .checkmark::after {
-  position: absolute;
-  display: block;
-  content: "";
-  left: 50%;
-  top: 40%;
-  width: 4px;
-  height: 8px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: translate(-50%, -50%) rotate(45deg);
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-  -moz-transform: translate(-50%, -50%) rotate(45deg);
-  -ms-transform: translate(-50%, -50%) rotate(45deg);
-  opacity: 0;
-  transition: all 0.2s ease;
-}
+  .radio-confirm input[type="radio"] {
+    width: 15px;
+    height: 15px;
+    margin: auto 4px auto 0px;
+  }
+  
+  .dialog-signature {
+    height: 210px;
+  }
 
-.checkbox input:checked~.checkmark::after {
-  opacity: 1;
-  transition: all 0.2s ease;
+  .lable-radio {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+  }
+
+  .checkbox-hide-processing-thread {
+    min-width: 20px;
+    min-height: 20px;
+    margin: auto 4px auto 0;
+  }
+
+  .checkbox-confirm {
+    margin-top: 10px;
+  }
+
+  .checkbox-confirm .text {
+    font-size: 12px;
+  }
+
+  .select-option {
+    button {
+      width: 100px;
+      height: 30px;
+      border-radius: 5px;
+      padding: 0px 12px;
+      font-size: 13px;
+    }
+  }
+
+  .upload-photo {
+    width: 100px;
+    height: 36px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    text-align: center; /* Canh giữa theo chiều ngang */
+    line-height: 36px; /* Đặt bằng chiều cao của ô */
+    font-size: 14px;
+    font-weight: 700;
+    border: 1px solid #0041C4;
+    background-color: #FFFFFF;
+    color: #0041C4;
+    margin: auto;
+  }
+  
+  .text-support-extension {
+    font-size: 11px;
+    margin-top: 5px;
+  }
 }
