--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -43,7 +43,7 @@
         <div class="col-xxl-2-5 col-lg-4 col-md-6">
             <div>{{ 'completed-date' | translate}} </div>
             <div class="input-line">
-                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" (ngModelChange)="onDateChange()"[showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
             </div>
         </div>
 
@@ -61,6 +61,7 @@
                     [options]="optionsStatus"
                     [(ngModel)]="contractStatus"
                     [autoDisplayFirst]="false"
+                    (ngModelChange)="onStatusChange()"
                 ></p-dropdown>
             </div>
         </div>
