"Updated ReportDetailComponent: changed event handler from ngModelChange to onChange in HTML, and made corresponding changes in TS file"

--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -61,7 +61,7 @@
                     [options]="optionsStatus"
                     [(ngModel)]="contractStatus"
                     [autoDisplayFirst]="false"
-                    (ngModelChange)="onStatusChange()"
+                    (onChange)="onStatusChange()"
                 ></p-dropdown>
             </div>
         </div>
