--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -36,7 +36,7 @@
        <div class="col-xxl-2 col-lg-4 col-md-6">
         <div>{{ 'completed-date' | translate}} </div>
         <div class="input-line">
-            <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+            <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="completionDate" (ngModelChange)="onDateChange()"[showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
         </div>
       </div>
       <!--Trạng thái-->
@@ -53,6 +53,7 @@
                   [showClear]="true"
                   [options]="optionsStatus"
                   [autoDisplayFirst]="false"
+                  (onChange)="onStatusChange()"
               ></p-dropdown>
           </div>
       </div>
