--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -111,7 +111,7 @@
                             </span>
                         </td>
                         <td>{{this.convert(list.status)}}</td>
-                        <td class="row-word">{{this.convertTime(list.createdAt)}}</td>
+                        <td class="row-word">{{this.convertTime(list.created_at)}}</td>
                         <td>{{list.processedUser}}</td>
                         <td>{{list.processingUser}}</td>
                         <td>{{list.notProcessedYet}}</td>
