Added a new table column to display the "created_at" value.

--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -110,6 +110,7 @@
                                 {{ list.participants[i].name }}
                             </span>
                         </td>
+                        <td>{{list.created_at}}</td>
                         <td>{{this.convert(list.status)}}</td>
                         <td class="row-word">{{this.convertTime(list.created_at)}}</td>
                         <td>{{list.processedUser}}</td>
