thêm người xử lý đầu cho usb token v1

--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -138,7 +138,7 @@
               <img  width="16px" height="16px" *ngIf="!this.page1" src="assets/img/First.png">
               <img  width="16px" height="16px" *ngIf="this.page1" src="assets/img/First.png">
           </button>
-          <button style="margin: 0px 8px;" class="call-page input1" (click)="previousPage()">
+          <button style="margin: 0px 8px;" class="call-page input1" (click)="previousPagePdf()">
               <img width="16px" height="16px" *ngIf="this.page1" src="assets/img/Prev.png">
               <img width="16px" height="16px" *ngIf="!this.page1" src="assets/img/Prev.png">
           </button>
