"add completeDate in reportStatus'"

--- a/src/app/main/report/report-status-contract/report-status-contract.component.html
+++ b/src/app/main/report/report-status-contract/report-status-contract.component.html
@@ -110,9 +110,8 @@
                                 {{ list.participants[i].name }}
                             </span>
                         </td>
-                        <td>{{list.created_at}}</td>
                         <td>{{this.convert(list.status)}}</td>
-                        <td class="row-word">{{this.convertTime(list.created_at)}}</td>
+                        <td class="row-word">{{this.convertTime(list.completeDate)}}</td>
                         <td>{{list.processedUser}}</td>
                         <td>{{list.processingUser}}</td>
                         <td>{{list.notProcessedYet}}</td>
