--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid color-dialog-sign height-dialog">
+<div class="container-fluid color-dialog-sign default-image">
   <div class="content-title-dialog-sign">
     <div class="title-dialog-sign">{{this.datas.title}}</div>
   </div>
@@ -6,25 +6,25 @@
   <div class="text-select margin-top-20px">{{'text.select' | translate}}</div>
 
   <div class="content">
-    <div class="margin-top-20px d-flex justify-content-between">
+    <div class="margin-top-20px d-flex justify-content-between gap-5">
       <div *ngIf="!this.data.mark" class="radio-confirm d-flex">
-        <div *ngIf="!this.data.mark">
+        <div *ngIf="!this.data.mark" class="flex">
           <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3"
             [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
-          <label class="lable-radio" for="radio-img-draw">Vẽ tay chữ ký</label>
+          <div class="lable-radio" for="radio-img-draw">Vẽ tay chữ ký</div>
         </div>
       </div>
 
-      <div class="radio-confirm d-flex">
+      <div class="radio-confirm flex">
         <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2"
           [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
-        <label class="lable-radio" for="radio-file-com">Tải ảnh lên</label>
+        <div class="lable-radio" for="radio-file-com">Tải ảnh lên</div>
       </div>
 
-      <div class="radio-confirm d-flex">
+      <div class="radio-confirm flex">
         <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1"
           [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
-        <label class="lable-radio" for="radio-file-account">Ảnh từ tài khoản</label>
+        <div class="lable-radio" for="radio-file-account">Ảnh từ tài khoản</div>
       </div>
     </div>
 
