--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,10 +98,10 @@
    margin: 0 auto;
 
    //fix popup ký cts
-   @media only screen and (max-width: 390px) {
-    padding: 0px;
-    margin: 0 auto;
-  }
+  //  @media only screen and (max-width: 390px) {
+  //   padding: 12px;
+  //   margin: 0 auto;
+  // }
 }
 
 .long-text-ellipsis {
