--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -68,11 +68,11 @@
     
         <!-- Button -->
         <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-            <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+            <button class="btn btn-lg btn-block btn_submit" (click)="onReportClick(true)" (click)="export(false)">{{'btn.report' | translate }}</button>
         </div>
     
         <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-            <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
+            <button (click)="export(true)"  class="btn btn-lg btn-block btn_submit">Export</button>
         </div>
     </div>
     
