--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -61,7 +61,7 @@
 
       <!--Button-->
       <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-        <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+        <button class="btn btn-lg btn-block btn_submit" (click)="export(false)" (click)="onReportClick(true)">{{'btn.report' | translate }}</button>
       </div>
 
       <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
