--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -34,7 +34,7 @@
 
     <!--Button-->
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-      <button class="btn btn-lg btn-block btn_submit" (click)="exportEmailReportCall(false)">{{'btn.report' | translate}}</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportEmailReportCall(false)"(click)="onReportClick(true)">{{'btn.report' | translate}}</button>
     </div>
 
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
