--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -52,7 +52,7 @@
 
     <!--Button-->
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-      <button class="btn btn-lg btn-block btn_submit" (click)="exportSmsReportCall(false)">{{'btn.report' | translate}}</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportSmsReportCall(false)"(click)="onReportClick(true)">{{'btn.report' | translate}}</button>
     </div>
 
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
