--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div class="text-sign-not-template-text" *ngIf="(sign.sign_unit == 'text') && !signTemplate">
+<div [ngClass]="sign.isView ? 'text-sign-not-template-text1' : 'text-sign-not-template-text'" *ngIf="(sign.sign_unit == 'text') && !signTemplate">
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
@@ -43,7 +43,7 @@
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
-<div [ngStyle]="getStyleText(sign)" class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
+<div [ngStyle]="getStyleText(sign)" [ngClass]="sign.isView ? 'text-sign1' : 'text-sign'" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
   <span *ngIf="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 
   <!-- o text -->
